# kiosk-browser

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/kiosk-core/: Cargo.toml
crates/kiosk-core/src/: error.rs  identity.rs  lib.rs
crates/kiosk-core/src/app/: mod.rs  state.rs
crates/kiosk-core/src/config/: bootstrap.rs  mod.rs  schema.rs  signature.rs  store.rs  validate.rs
crates/kiosk-core/src/logging/: auth.rs  client.rs  entry.rs  event.rs  mod.rs  ratelimit.rs  spool.rs  time.rs  transport.rs
crates/kiosk-core/src/logging/testdata/: test_service_account.json
crates/kiosk-core/src/nav/: allowlist.rs  mod.rs  scheme.rs
crates/kiosk-core/src/net/: mod.rs  prober.rs  reach.rs
crates/kiosk-launcher/: Cargo.toml
crates/kiosk-launcher/src/: main.rs
crates/kiosk-main/: Cargo.toml  tauri.conf.json
crates/kiosk-main/assets/: index.html
crates/kiosk-main/bundled/: error.html  offline.html  splash.html
crates/kiosk-main/capabilities/: default.json
crates/kiosk-main/src/: boot.rs  cli.rs  driver.rs  effect.rs  fetch.rs  main.rs  nav.rs  probe.rs  spike.rs  telemetry.rs
docs/superpowers/plans/: 2026-07-06-p0-input-gate-report.md  2026-07-06-p0-skeleton-and-input-gate.md  2026-07-11-p1a-core-identity-and-config.md  2026-07-13-p1b-core-telemetry.md  2026-07-14-p1c-core-prober-and-nav.md  2026-07-16-p1d1-app-state-machine.md  2026-07-18-p1d2a-integration-spine.md  2026-07-19-p1d2b-webview-hardening.md
docs/superpowers/specs/: 2026-07-05-kiosk-browser-design.md  2026-07-18-p1d2a-integration-spine-design.md  2026-07-18-p1d2b-webview-hardening-design.md
