[package]
name = "kiosk-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_jcs = "0.1"
ed25519-dalek = "2"
base64 = "0.22"
thiserror = "2"
rust-ini = "0.21"
chrono = { version = "0.4", default-features = false, features = ["std", "clock", "serde"] }

[dev-dependencies]
tempfile = "3"
