[package]
name = "kiosk-main"
version.workspace = true
edition.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
kiosk-core.workspace = true
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-util = "0.7"                      # CancellationToken
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde_json = "1"

[target.'cfg(windows)'.dependencies]
webview2-com = "0.38"
windows = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_System_LibraryLoader",
] }

[dev-dependencies]
tempfile = "3"
# Test-only: the RSA keypair for telemetry's Logger/TokenSource tests is
# generated at run time, mirroring kiosk-core's own auth.rs tests — never a
# committed fixture (a `-----BEGIN PRIVATE KEY-----` in the repo is the
# highest-signal pattern secret scanners hunt for).
rsa = { version = "0.9", features = ["pem"] }
rand = "0.8"
